--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="api.js"></script>
 </head>
 <body>
+<div id="container">
+    <div id="header">
+    
+        <div id="logo"></div><div id="menu"></div>
+    </div>
+    <div id="main"></div>
+</div>
     
 </body>
 </html>
