--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="container">
     <div id="header">
     
-        <div id="logo"></div><div id="menu"></div>
+        <div id="logo"></div><div id="lower"></div><div id="upper"></div><div id="menu"></div>
     </div>
     <div id="main"></div>
 </div>
