--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
         <div id="logo"></div><div id="lower"></div><div id="upper"></div><div id="menu"></div>
     </div>
-    <div id="main"></div>
+    <div id="main">!!!!!!!!!!!!!!!!!!</div>
 </div>
 <script src="app.js"></script>
     
