--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     </div>
     <div id="main">!!!!!!!!!!!!!!!!!!</div>
 </div>
-<script src="app.js"></script>
-    
+<script type="module" src="app.js"></script>   
 </body>
 </html>
