--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </div>
     <div id="main">!!!!!!!!!!!!!!!!!!</div>
 </div>
-<script type="module" src="app.js"></script>   
+<script type="module" src="./src/js/app.js"></script>   
 </body>
 </html>
