--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
+c
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<div id="container">
-    <div id="header">
-    
-        <div id="logo"></div><div id="lower"></div><div id="upper"></div><div id="menu"></div>
+    <div id="container">
+        <div id="header">
+
+            <div id="logo"></div>
+            <div id="lower"></div>
+            <div id="upper"></div>
+            <div id="menu"></div>
+        </div>
+        <div id="main">!!!!!!!!!!!!!!!!!!</div>
     </div>
-    <div id="main">!!!!!!!!!!!!!!!!!!</div>
-</div>
-<script type="module" src="app.js"></script>   
+    <script type="module" src="app.js"></script>
 </body>
+
 </html>
