--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     
         <div id="logo"></div><div id="lower"></div><div id="upper"></div><div id="menu"></div>
     </div>
-    <div id="main">!!!!!!!!!!!!!!!!!!</div>
+    <div id="main">
+        
+    </div>
+    <h3 id="summary"></h3>
 </div>
 <script type="module" src="./src/js/app.js"></script>   
 </body>
