Dodanie nowych zdjęć do plików

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-c
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -13,7 +13,7 @@ c
     <div id="container">
         <div id="header">
 
-            <div id="logo"></div>
+            <div id="logo"><img src="https://img.pngio.com/pin-en-star-wars-darth-vader-mask-clipart-2068_2009.png" width="70px" height="67px" ></div>
             <div id="lower"></div>
             <div id="upper"></div>
             <div id="menu"></div>
