--- a/index.html
+++ b/index.html
@@ -13,12 +13,27 @@
     <div id="container">
         <div id="header">
 
-            <div id="logo"><img src="https://img.pngio.com/pin-en-star-wars-darth-vader-mask-clipart-2068_2009.png" width="70px" height="67px" ></div>
+            <div id="logo"><img src="/src/img/Darth_vader_helmet.png"></div>
             <div id="lower"></div>
             <div id="upper"></div>
-            <div id="menu"></div>
+            <div id="menu">
+                <ul>
+                    <li>Postcie</li>
+                    <li>Planety</li>
+                    <li>Statki</li>
+                </ul>
+            </div>
         </div>
-        <div id="main">!!!!!!!!!!!!!!!!!!</div>
+        <div id="main">
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+        </div>
         <div id="summary"></div>
     </div>
     <script type="module" src="./src/js/app.js"></script>
