--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 </ul>
             </div>
         </div>
+        <div id='search'>
+
+        </div>
+        <div id='serach_btn'></div>
         <div id="main">
             <div class="line1"></div>
             <div class="line1"></div>
