--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         </div>
         <div id='search'>
 
+            <textarea id="text"></textarea>
+        <button id='lupa'></button>
         </div>
-        <div id='serach_btn'></div>
         <div id="main">
             <div class="line1"></div>
             <div class="line1"></div>
