--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div id="upper"></div>
             <div id="menu">
                 <ul>
-                    <li>Postcie</li>
-                    <li>Planety</li>
-                    <li>Statki</li>
+                    <li><a>Postcie</a></li>
+                    <li><a>Planety</a></li>
+                    <li><a>Statki</a></li>
                 </ul>
             </div>
         </div>
