--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="./src/js/app.js"></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
         <div id='search'>
 
             <textarea id="text"></textarea>
-        <button id='lupa'></button>
+        <button id='lupa' onclick=src()></button>
         </div>
         <div id="main">
             <div class="line1"></div>
@@ -41,7 +42,7 @@
         </div>
         <div id="summary"></div>
     </div>
-    <script type="module" src="./src/js/app.js"></script>
+
 </body>
 
 </html>
