--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id='search'>
 
             <textarea id="text"></textarea>
-        <button id='lupa' onclick=src()></button>
+        <button id='lupa' onclick='src()'></button>
         </div>
         <div id="main">
             <div class="line1"></div>
