--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="./src/js/app.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Roboto:wght@100&family=Russo+One&display=swap" rel="stylesheet">    
 </head>
 
 <body>
