--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         <div id='search'>
 
             <textarea id="text"></textarea>
+            <select name="cat" id="cat">
+                <option value="Films">Films</option>
+                <option value="People">People</option>
+                <option value="Planets">Planets</option>
+                <option value="Vechicles">Vechicles</option>
+                <option value="Spaceships">Spaceships</option>
+              </select>
         <button id='lupa' onclick='src()'></button>
         </div>
         <div id="main">
