--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         </div>
         <div id='search'>
 
-<<<<<<< Updated upstream
-            <textarea id="text"></textarea>
+            <input type="text" id="text"></input>
             <select name="cat" id="cat">
                 <option value="Films">Films</option>
                 <option value="People">People</option>
@@ -38,9 +37,6 @@
                 <option value="Vechicles">Vechicles</option>
                 <option value="Spaceships">Spaceships</option>
               </select>
-=======
-            <input type='text' id="text"></input>
->>>>>>> Stashed changes
         <button id='lupa' onclick='src()'></button>
         </div>
         <div id="main">
