--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         </div>
         <div id='search'>
 
-            <input type="text" id="text"></input>
+            <input type="text" name="query" id="query"></input>
             <select name="cat" id="cat">
-                <option value="Films">Films</option>
-                <option value="People">People</option>
-                <option value="Planets">Planets</option>
-                <option value="Vechicles">Vechicles</option>
-                <option value="Spaceships">Spaceships</option>
+                <option value="films">films</option>
+                <option value="people">people</option>
+                <option value="planets">planets</option>
+                <option value="vechicles">vechicles</option>
+                <option value="spaceships">spaceships</option>
               </select>
         <button id='lupa' onclick='src()'></button>
         </div>
