--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <option value="vechicles">vechicles</option>
                 <option value="spaceships">spaceships</option>
               </select>
-        <button id='lupa' onclick='src()'></button>
+        <button id='lupa' >\lupa\</button>
         </div>
         <div id="main">
             <div class="line1"></div>
