--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script type="module" src="./src/js/app.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Roboto:wght@100&family=Russo+One&display=swap" rel="stylesheet">    
+<link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@900&family=Roboto:wght@100&family=Russo+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,9 +21,9 @@
             <div id="upper"></div>
             <div id="menu">
                 <ul>
-                    <li><a>Postcie</a></li>
-                    <li><a>Planety</a></li>
-                    <li><a>Statki</a></li>
+                    <li><a>Charakters</a></li>
+                    <li><a>Planets</a></li>
+                    <li><a>Spacecrafts</a></li>
                 </ul>
             </div>
         </div>
