--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <button id='lupa' >\lupa\</button>
         </div>
         <div id="main">
-            <div class="line1"></div>
-            <div class="line1"></div>
-            <div class="line1"></div>
-            <div class="line1"></div>
-            <div class="line1"></div>
-            <div class="line1"></div>
-            <div class="line1"></div>
-            <div class="line1"></div>
+            <div class="line1"><img src="/src/img/people/anakinskywalker.jpg"></div>
+            <div class="line1"><img src="/src/img/people/beruwhitesunlars.jpg"></div>
+            <div class="line1"><img src="/src/img/people/chewbacca.jpg"></div>
+            <div class="line1"><img src="/src/img/people/darklighterbiggs.jpg"></div>
+            <div class="line1"><img src="/src/img/people/darkvader.jpg"></div>
+            <div class="line1"><img src="/src/img/people/leia.jpg"></div>
+            <div class="line1"><img src="/src/img/people/lukeskywalker.jpg"></div>
+            <div class="line1"><img src="/src/img/people/obiwankenobi.jpg"></div>
         </div>
         <div id="summary"></div>
     </div>
