--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script type="module" src="./src/js/app.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@900&family=Roboto:wght@100&family=Russo+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&family=Roboto:wght@100&family=Russo+One&display=swap" rel="stylesheet">    
 </head>
 
 <body>
@@ -21,9 +21,9 @@
             <div id="upper"></div>
             <div id="menu">
                 <ul>
-                    <li><a>Charakters</a></li>
-                    <li><a>Planets</a></li>
-                    <li><a>Spacecrafts</a></li>
+                    <li><a>Postcie</a></li>
+                    <li><a>Planety</a></li>
+                    <li><a>Statki</a></li>
                 </ul>
             </div>
         </div>
@@ -40,14 +40,14 @@
         <button id='lupa' >\lupa\</button>
         </div>
         <div id="main">
-            <div class="line1"><img src="/src/img/people/anakinskywalker.jpg"></div>
-            <div class="line1"><img src="/src/img/people/beruwhitesunlars.jpg"></div>
-            <div class="line1"><img src="/src/img/people/chewbacca.jpg"></div>
-            <div class="line1"><img src="/src/img/people/darklighterbiggs.jpg"></div>
             <div class="line1"><img src="/src/img/people/darkvader.jpg"></div>
-            <div class="line1"><img src="/src/img/people/leia.jpg"></div>
-            <div class="line1"><img src="/src/img/people/lukeskywalker.jpg"></div>
-            <div class="line1"><img src="/src/img/people/obiwankenobi.jpg"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
+            <div class="line1"></div>
         </div>
         <div id="summary"></div>
     </div>
