--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div id="container">
         <div id="header">
             <div id="logo"><img src="/src/img/Darth_vader_helmet.png"></div>
-            <div id="lower"></div>
-            <div id="upper"></div>
+            <div id="upper"><a>STAR WARS</a></div>
+            <div id="lower"><a>fanwiki</a></div>
             <div id="menu">
                 <ul>
                     <li><a>Charakters</a></li>
