--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div id="lower"><a>fanwiki</a></div>
             <div id="menu">
                 <ul>
-                    <li><a>Postcie</a></li>
-                    <li><a>Planety</a></li>
-                    <li><a>Statki</a></li>
+                    <li><a>Characters</a></li>
+                    <li><a>Planets</a></li>
+                    <li><a>Spacecrafts</a></li>
                 </ul>
             </div>
         </div>
