--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
               </select>
         <button id='lupa' >\lupa\</button>
         </div>
-        <div id="main">
 
-        </div>
+
+        <div id="main"> </div>
 
 
 
