--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StarWars Fanwiki</title>
+    <link rel="shortcut icon" href="/src/img/Darth_vader_helmet.png">
     <link rel="stylesheet" href="style.css">
     <script type="module" src="./src/js/app.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
