--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div id="lower"><a>fanwiki</a></div>
             <div id="menu">
                 <ul>
-                    <li><a>Characters</a></li>
-                    <li><a>Planets</a></li>
-                    <li><a>Spacecrafts</a></li>
+                   <li><a class="menuitem" id="people">Characters</a></li>
+                    <li><a class="menuitem" id="planets">Planets</a></li>
+                    <li><a class="menuitem" id="spaceships">Spacecrafts</a></li>
                 </ul>
             </div>
         </div>
